# myAgent

./: .env.example  .gitignore  DEEPSEEK_GUIDE.md  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  spec.md
config/: settings.yaml  skills.yaml
data/: .cli_history
docs/: agentic_patterns.txt
examples/: basic_usage.py  skill_usage.py
scripts/: install.ps1  start.ps1
src/: __init__.py  main.py
src/agent/: __init__.py  prompt.py  runtime.py
src/channels/: __init__.py  base.py  cli.py
src/core/: __init__.py  config.py  llm.py
src/memory/: __init__.py  long_term.py  manager.py  short_term.py
src/skills/: __init__.py  base.py  manager.py
src/skills/file/: __init__.py  list_directory.py  read_file.py  search_files.py  write_file.py
src/skills/system/: __init__.py  execute_command.py  get_system_info.py  list_processes.py
src/utils/: __init__.py  logger.py
tests/: test_config.py  test_memory.py  test_skills.py
